correçao de texo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <main class="container-main">
-            <h2>Você realmente sabe tudo sobre league of legendes?</h2>
+            <h2>Você realmente sabe tudo sobre league of legends?</h2>
             <form class="quiz-formulario">
               <div class="container-perguntas">
                 <p class="pergunta">
